Configure mongodb with models for User and Item.
